Добавлена функциональность «Популярные фильмы» (#13)
* Обновлен метод getTopFilms в цепочке FilmController->FilmService->FilmDbStorage->FilmRepository согласно новой функциональности (фильтрации по genreId и year)

* Обновлен метод getTopFilms в цепочке FilmController->FilmService->FilmDbStorage->FilmRepository согласно новой функциональности (фильтрации по genreId и year)

* делаю коммит псÐоскольку force push не триггерит пайплайн по всей видимости

* Исправил логику работы метода getTopFilms(...) (параметры строки запроса genreId and year являются необязательными)

---------

Co-authored-by: nesailormun <Keyko07@yandex.ru>